@@ -19,11 +19,10 @@ import static ch.post.it.evoting.cryptoprimitives.utils.Validations.allEqual;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
 
-import java.util.Arrays;
-import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.cryptoprimitives.hashing.Hashable;
 import ch.post.it.evoting.cryptoprimitives.hashing.HashableList;
 import ch.post.it.evoting.cryptoprimitives.math.GqElement;
@@ -64,7 +63,7 @@ public final class ProductArgument implements HashableList {
 		checkNotNull(singleValueProductArgument);
 
 		// Cross group checking.
-		final List<GqGroup> gqGroups = Arrays.asList(c_b.getGroup(), hadamardArgument.getGroup(), singleValueProductArgument.getGroup());
+		final ImmutableList<GqGroup> gqGroups = ImmutableList.of(c_b.getGroup(), hadamardArgument.getGroup(), singleValueProductArgument.getGroup());
 		checkArgument(allEqual(gqGroups.stream(), g -> g),
 				"The commitment b, Hadamard argument and single value product argument groups must have the same order.");
 
@@ -138,10 +137,10 @@ public final class ProductArgument implements HashableList {
 	}
 
 	@Override
-	public List<? extends Hashable> toHashableForm() {
+	public ImmutableList<Hashable> toHashableForm() {
 		if (c_b == null) {
-			return List.of(singleValueProductArgument);
+			return ImmutableList.of(singleValueProductArgument);
 		}
-		return List.of(c_b, hadamardArgument, singleValueProductArgument);
+		return ImmutableList.of(c_b, hadamardArgument, singleValueProductArgument);
 	}
 }
